docs: Incorporate Grzegorz's fix for additional scrollbar issue
An additional scrollbar appears on some browsers in
section "User Guide".

--- a/docs/bodo-theme/static/custom.css
+++ b/docs/bodo-theme/static/custom.css
@@ -74,7 +74,6 @@ div.sphinxsidebar a {
 }
 div.body {
     height: calc(100vh - 185px);
-    overflow: auto;
     position: relative;
     top: 40px;
     color: #25273f;
